; ModuleID = '/home/carl/AnghaBench/esp-idf/components/soc/src/hal/extr_spi_flash_hal_iram.c_spi_flash_hal_configure_host_io_mode.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/soc/src/hal/extr_spi_flash_hal_iram.c_spi_flash_hal_configure_host_io_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.TYPE_5__ = type { i32 }

@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spi_flash_hal_configure_host_io_mode(%struct.TYPE_6__* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %9, align 4
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to %struct.TYPE_5__*
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = add nsw i32 %13, %19
  store i32 %20, i32* %11, align 4
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %22 = call i32* @get_spi_dev(%struct.TYPE_6__* %21)
  store i32* %22, i32** %12, align 8
  %23 = load i32*, i32** %12, align 8
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @spi_flash_ll_set_command8(i32* %23, i32 %24)
  %26 = load i32*, i32** %12, align 8
  %27 = load i32, i32* %8, align 4
  %28 = call i32 @spi_flash_ll_set_addr_bitlen(i32* %26, i32 %27)
  %29 = load i32*, i32** %12, align 8
  %30 = load i32, i32* %11, align 4
  %31 = call i32 @spi_flash_ll_set_dummy(i32* %29, i32 %30)
  %32 = load i32*, i32** %12, align 8
  %33 = call i32 @spi_flash_ll_set_miso_bitlen(i32* %32, i32 0)
  %34 = load i32*, i32** %12, align 8
  %35 = call i32 @spi_flash_ll_set_mosi_bitlen(i32* %34, i32 0)
  %36 = load i32*, i32** %12, align 8
  %37 = load i32, i32* %10, align 4
  %38 = call i32 @spi_flash_ll_set_read_mode(i32* %36, i32 %37)
  %39 = load i32, i32* @ESP_OK, align 4
  ret i32 %39
}

declare dso_local i32* @get_spi_dev(%struct.TYPE_6__*) #1

declare dso_local i32 @spi_flash_ll_set_command8(i32*, i32) #1

declare dso_local i32 @spi_flash_ll_set_addr_bitlen(i32*, i32) #1

declare dso_local i32 @spi_flash_ll_set_dummy(i32*, i32) #1

declare dso_local i32 @spi_flash_ll_set_miso_bitlen(i32*, i32) #1

declare dso_local i32 @spi_flash_ll_set_mosi_bitlen(i32*, i32) #1

declare dso_local i32 @spi_flash_ll_set_read_mode(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
